12 - 2 코드 구조 설계

--- a/GameCoding/GameCoding/GameCoding.vcxproj.filters
+++ b/GameCoding/GameCoding/GameCoding.vcxproj.filters
@@ -42,6 +42,15 @@
     <Filter Include="소스 파일\02. Scene\Game\Fortress">
       <UniqueIdentifier>{4ceaf6e1-3c08-425d-8319-d1c33a0c16ad}</UniqueIdentifier>
     </Filter>
+    <Filter Include="소스 파일\03. Objects\Unreal">
+      <UniqueIdentifier>{0208de29-5e34-47c3-869f-70e270b8e479}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="소스 파일\05. Component">
+      <UniqueIdentifier>{399ecf36-37d9-48f8-a3de-5f1a8488dc0b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="소스 파일\05. Component\Game">
+      <UniqueIdentifier>{686c2d11-1c49-4ba8-a6a0-c5a5f5060053}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameCoding.h">
@@ -110,6 +119,18 @@
     <ClInclude Include="Sprite.h">
       <Filter>소스 파일\04. Resources</Filter>
     </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>소스 파일\03. Objects\Game</Filter>
+    </ClInclude>
+    <ClInclude Include="Actor.h">
+      <Filter>소스 파일\03. Objects\Unreal</Filter>
+    </ClInclude>
+    <ClInclude Include="SpriteActor.h">
+      <Filter>소스 파일\03. Objects\Unreal</Filter>
+    </ClInclude>
+    <ClInclude Include="Component.h">
+      <Filter>소스 파일\05. Component</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="GameCoding.rc">
@@ -169,6 +190,18 @@
     </ClCompile>
     <ClCompile Include="Sprite.cpp">
       <Filter>소스 파일\04. Resources</Filter>
+    </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>소스 파일\03. Objects\Game</Filter>
+    </ClCompile>
+    <ClCompile Include="Actor.cpp">
+      <Filter>소스 파일\03. Objects\Unreal</Filter>
+    </ClCompile>
+    <ClCompile Include="SpriteActor.cpp">
+      <Filter>소스 파일\03. Objects\Unreal</Filter>
+    </ClCompile>
+    <ClCompile Include="Component.cpp">
+      <Filter>소스 파일\05. Component</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
